# agentcore-cli

./: .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  README.md  esbuild.config.mjs  package-lock.json  package.json
.github/workflows/: bug-fixer.yml  build-and-test.yml  e2e-tests-full.yml  e2e-tests.yml  feature-builder.yml  release-main-and-preview.yml  release.yml  sync-preview.yml  (+2 more)
agents/: config.yaml  pyproject.toml
agents/bug_fixer/: main.py
agents/bug_fixer/prompts/: executor.md  fixer.md  planner.md  reviewer.md  setup.md
agents/core/: config.py  harness_client.py  parsing.py
agents/feature_builder/: main.py
agents/feature_builder/prompts/: executor.md  fixer.md  planner.md  reviewer.md  setup.md
agents/orchestrations/fix_and_review/: orchestrator.py  partitioning.py
agents/orchestrations/fix_and_review/phases/: aggregate.py  complete.py  execute.py  extract.py  fix.py  plan.py  review.py  setup.py  validate.py  verify.py
agents/tests/: test_config.py  test_harness_client.py  test_parsing.py  test_partitioning.py
docs/: PERMISSIONS.md  batch-evaluation.md  commands.md  config-bundles.md  configuration.md  container-builds.md  evals.md  frameworks.md  gateway.md  harness-bug-bash.md  llm-cli-documentation-guidelines.md  local-development.md  memory.md  test-resource-sweeper-spec.md
e2e-tests/: byo-custom-jwt.test.ts  config-bundle-eval-rec.test.ts  e2e-helper.ts
integ-tests/: add-remove-ab-test.test.ts  batch-eval.test.ts  create-with-agent.test.ts  dev-server.test.ts
schemas/: agentcore.schema.v1.json
scripts/: check-coverage.mjs
(+272 files in other folders)
