[project]
name = "harness-invoke"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42.94,<1.43.2",
    "botocore>=1.42.94,<1.43.2",
    "pydantic>=2.13.1",
    "pyyaml>=6.0.3",
    "urllib3>=2.6.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
